# swift-ramp-smartcontract

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  generate_commits.sh  package.json
contracts/lineproof-identity/: Cargo.toml
contracts/lineproof-identity/src/: lib.rs
contracts/lineproof-identity/test_snapshots/tests/: test_can_transfer_not_in_queue.1.json  test_can_transfer_reads_identity_record.1.json  test_can_transfer_revoked_identity.1.json  test_can_transfer_self_transfer.1.json  test_can_transfer_unregistered_identity.1.json  test_get_identity_status.1.json  test_initialize.1.json
contracts/swiftramp-swap/: Cargo.toml
contracts/swiftramp-swap/src/: lib.rs
contracts/swiftramp-swap/test_snapshots/tests/: test_admin_can_update_expired_rate.1.json  test_commitment_key_remains_available.1.json  test_initialize.1.json  test_initialize_cannot_be_called_twice.1.json  test_lock_cleared_after_panic.1.json  test_lock_is_set_and_cleared_around_transfers.1.json  test_lock_not_held_at_rest.1.json  test_old_admin_rejected_after_rotation.1.json  test_oracle_heartbeat_requires_admin_auth.1.json  test_oracle_heartbeat_stores_timestamp.1.json  test_oracle_heartbeat_updates_on_second_call.1.json  test_quote_exactly_at_max_age_passes.1.json  test_quote_fresh_rate_passes.1.json  test_quote_no_timestamp_panics.1.json  test_quote_overflow_panics.1.json  test_quote_precision.1.json  test_quote_stale_rate_panics.1.json  test_quote_tight_max_age_panics.1.json  test_quote_unknown_pair.1.json  test_quote_zero_amount.1.json  test_rate_timestamp_returns_zero_when_unset.1.json  (+17 more)
(+65 files in other folders)
